	  qualifiers in function declarations. Labels are now unindented, with all
	  of the code in functions being idented at 1 tab. Fixed bug #1205926 "UCXT:
	  Functions with no params are decompiled as having one". Fixed bug #1205910
	  "UCXT: Parameter order reversed in function definitions".
	* all: Performance: using ++it instead of it++ for iterators.

2013-01-22	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* gumps/Spellbook_gump.*: Keyboard controls for spellbook: page up/down will
	  change current page, arrow keys will move the bookmark, home/end will move
	  to first/last page, enter moves to the bookmark.
	* gumps/*.h: Removing some warnings.

2013-01-21	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* content/bgkeyring/*: Healing services were not charging any money.
	Rev 7319
	* all: World-wrapping for finding directions.
	Rev 7320
	* combat.cc: Fixed error introduced in rev 7296, allowing people to keep on
	  attacking turned-invisible foes.

2013-01-20	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* content/makefile_builder.sh: Updated to work without doing a 'clean'.
	* content/{bgkeyring,sifixes}/{README,Readme.txt}: Massive update, clean-up
	  and reformatting.
	Rev 7312
	* combat.cc: Combat music should start if the avatar is targetting an NPC.
	Rev 7313
	* actors.cc: Doing a raw intelligence check causes some animals to be able
	  to open doors; so I am basing the sentince test only on monster intellect,
	  which is 10 for 'default' monster information.
	Rev 7314
	* all: Research into the originals shows that only neutral NPCs and guards
	  call guards -- good NPCs ignore theft, murder and being attacked, evil and
	  chaotic are out for your blood anyway. Based on this, I revamped the call
	  guards/attack avatar bit so only neutral NPCs and guards call guards and
	  NPCs of all alignments help NPCs of the same alignment, while ignoring any
	  friendly fire. Disabled actors no longer call for help -- instead, if any