@@ -67,7 +67,7 @@ C		toggle_combat
 SPACE		pause_combat
 Ctrl-D		delete_object
 E		toggle_eggs
-F		useitem			377	# Feed
+F		usefood
 G		useitem			675	11	# Use abacus
 Alt-G		toggle_god_mode
 Ctrl-G		change_gender
